Fixed the issue where the buttons on the forms will get too close on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,6 @@ h1.display-2{
   padding-top: 6em;
   background-color: #FF5E42;
   color: #FFFFFF;
-
 }
 
 body  {
@@ -47,6 +46,14 @@ label{
   padding: 10% 0;
 }
 
+.margin{
+  margin: 0, 10%;
+}
+
 .padding{
-  padding: 2% 0;
+  padding: 5% 0;
+}
+
+.paddingRL{
+  padding: 0% 5%;
 }
